Suppressing possible warnings over deprecated methods being used.